------------------------------------------------------
Version 1.10.2 - 2.2.1
------------------------------------------------------
Additions
- Added back EnderStorage support (can right click a pouch to open it directly from a backpack's inventory).

Changes
- None

Bug Fixes
- Fix background transparency for basic and gold backpacks.
------------------------------------------------------
Version 1.10.2 - 2.2.0
------------------------------------------------------
Additions
- None

Changes
- Changed 'Crafting' upgrade's name back to to 'Compressing' as it fits the action more
- (Internal) Large change to how backpacks are rendered. Backpacks are no longer an entity, but rather are now rendered as a layer on the player model.

Bug Fixes
- Fix localization error for crafting upgrade.
- Fix crash/inconsistent data saving when changing dimensions with an equipped backpack on a dedicated server.
- Fix crash when using backpacks in an anvil.
------------------------------------------------------
Version 1.10.2 - 2.1.2
------------------------------------------------------
Additions
- None

Changes
- Change the backpack bobbing excessively when it is changed.

Bug Fixes
- Possible fix for backpack rendering issues causing crashes.
    - Will work on a guaranteed fix next.
------------------------------------------------------
Version 1.10.2 - 2.1.1
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Fix server crash due to bad import (Closes #76)
------------------------------------------------------
Version 1.10.2 - 2.1.0 (versioning: major-minor-build)
------------------------------------------------------
Initial Port to Minecraft 1.10.2

Additions (in relation to 1.8.9 - 2.0.5)
- JEI descriptions for each upgrades.
- Added the ability to right click the sort button to toggle sorting by item ID or item name alphabetization

Changes (in relation to 1.8.9 - 2.0.5)
- New textures! (Credit to the wonderful BBoldt)